--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap'); */
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 30px;
@@ -13,7 +11,36 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    flex-direction: column;
+    background-size: cover;
+}
+
+.person-name{
+    margin: auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+}
+
+.search{
+    margin: auto;
+}
+
+.google-search {
+    border-radius: 10px;
+    background-color: #edf3f1;
+    color: rgb(0, 0, 0);
     
+}
+
+.button {
+    border-radius: 10px;
+    color: rgb(240, 240, 240);
+    background-color: #01583b;
+}
+
+#time-div{
+    width: 700px;
+    height: 200px;
 }
 
 #time {
@@ -66,8 +93,8 @@ body {
 
 #time div span {
     position: relative;
-    font-size: 0.3em;
-    font-weight: 300;
+    font-size: 0.6em;
+    font-weight: 500;
     letter-spacing: 0.1em;
 }
 
